--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "gatsby-remark-copy-linked-files": "2.0.8",
     "gatsby-remark-images": "3.0.1",
     "gatsby-remark-prismjs": "3.2.0",
-    "gatsby-remark-relative-images": "0.2.1",
+    "gatsby-remark-relative-images": "^0.2.2",
     "gatsby-remark-responsive-iframe": "2.0.8",
-    "gatsby-source-filesystem": "2.0.16",
+    "gatsby-source-filesystem": "^2.0.27",
     "gatsby-transformer-remark": "2.2.0",
     "gatsby-transformer-sharp": "2.1.10",
     "lodash": "^4.17.10",
